# powermake

./: .gitignore  DESIGN.md  README.md  example_data.csv  process_data.sh  pyproject.toml  test_basic.py  test_nodes_only.py
output/: result.txt
powermake/: __init__.py  cli.py  nodes.py  pipeline.py
test_pipeline/: example_pipeline.yml
tests/: __init__.py  test_nodes.py  test_pipeline.py
