[tool.poetry]
name = "powermake"
version = "0.1.0"
description = "Enhanced makefile-style workflow manager"
authors = ["Carlos <carlos@example.com>"]
readme = "README.md"
packages = [{include = "powermake"}]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
pyyaml = "^6.0"
rich = "^13.0.0"
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[tool.poetry.scripts]
powermake = "powermake.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"